--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -2,8 +2,8 @@
   <nz-header style="position: fixed;left: 0;right: 0;z-index: 100;">
     <!-- <div class="logo"></div> -->
     <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 50px;">
-      <li style="font-size:16px;" [routerLink]="['/dashboard']" >
-        <i class="anticon anticon-line-chart" style="margin-left: 24px;color: #eee;"></i> <span style="cursor:pointer;">业务站点实时监控平台</span></li>
+      <li style="font-size:16px;" [routerLink]="['/home']" >
+        <i class="anticon anticon-line-chart" style="margin-left: 24px;color: #eee;"></i> <span style="cursor:pointer;color: #fff;margin-left: 4px;">业务站点实时监控平台</span></li>
     </ul>
   </nz-header>
 </nz-layout>
