--- a/web/src/app/web/web-sys/visit-geo/visit-geo.component.html
+++ b/web/src/app/web/web-sys/visit-geo/visit-geo.component.html
@@ -15,33 +15,49 @@
     <div style="overflow:auto;padding:24px 16px;" #mydetailsContent nz-col nzSpan="17">
       <div nz-row>
         <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="访问速度" [nzExtra]="extradlTemplate">
-            <!-- <app-custom-highchart></app-custom-highchart> -->
+          <nz-card nzType="inner" nzTitle="访问速度" [nzExtra]="extra_key_perf_Template">
+            <nz-spin *ngIf="geoListData.length>0" [nzSpinning]="isSpinning.spin2">
+              <app-custom-highchart [config]="key_perf_config"></app-custom-highchart>
+            </nz-spin>
           </nz-card>
-          <ng-template #extradlTemplate>
-            <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
+          <ng-template #extra_key_perf_Template >
+            <app-time-choice-panel (selectOver)="selectOver($event,10)"></app-time-choice-panel>
           </ng-template>
         </div>
       </div>
       <div nz-row>
         <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="JS错误率" [nzExtra]="extradlTemplate">
-            <!-- <app-custom-highchart></app-custom-highchart> -->
+  
+          <nz-card nzType="inner" [nzTitle]="jsCardTemplate" [nzExtra]="extralJsCardTemplate">
+            <nz-spin *ngIf="geoListData.length>0" [nzSpinning]="isSpinning.spin3">
+              <app-custom-highchart [config]="js_config"></app-custom-highchart>
+            </nz-spin>
           </nz-card>
-          <ng-template #extradlTemplate>
-            <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
+          <ng-template #jsCardTemplate>
+            JS错误率 
+            <nz-tooltip [nzTitle]="'发生错误的次数/访问量'" [nzPlacement]="'top'">
+              <i nz-tooltip class="anticon anticon-question-circle"></i>
+            </nz-tooltip>
+          </ng-template>
+          <ng-template #extralJsCardTemplate>
+            <app-time-choice-panel (selectOver)="selectOver($event,20)"></app-time-choice-panel>
           </ng-template>
         </div>
       </div>
       <div nz-row>
         <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="API请求成功率" [nzExtra]="extradlTemplate">
-            <!-- <app-custom-highchart></app-custom-highchart> -->
+  
+          <nz-card nzType="inner" [nzTitle]="'成功率'" [nzExtra]="extralApiCardTemplate">
+            <nz-spin *ngIf="geoListData.length>0" [nzSpinning]="isSpinning.spin4">
+              <app-custom-highchart  [config]="api_config"></app-custom-highchart>
+            </nz-spin>
           </nz-card>
-          <ng-template #extradlTemplate>
+          <ng-template #extralApiCardTemplate>
             <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
           </ng-template>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
+
+  
