--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -8,26 +8,45 @@
     text-align: center;
     left: 0;
     right: 0;
+
     .title {
       color: #fff;
       font-size: 80px;
     }
+
     .opt {
-        button{
-            width: 200px;
-            height: 40px;
-            line-height: 40px;
-            color: #fff;
-            border: solid 1px #fff;
-            border-radius: 18px;
-            background: rgba(217, 217, 217, 0);
-            &:hover{
-                background: #fff !important;
-                color: #333;
-                cursor: pointer;
-                transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
-            }
+      button {
+        width: 200px;
+        height: 40px;
+        line-height: 40px;
+        color: #fff;
+        border: solid 1px #fff;
+        border-radius: 18px;
+        background: rgba(217, 217, 217, 0);
+
+        &:hover {
+          background: #fff !important;
+          color: #333;
+          cursor: pointer;
+          transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
+      }
+    }
+  }
+}
+
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+  .title {
+    font-size: 20px !important;
+  }
+  .opt {
+    button {
+      width: 100px !important;
+      height: 24px !important;
+      line-height: 24px !important;
+      border-radius: 8px !important;
     }
   }
 }
