--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -6,6 +6,46 @@
     </div>
     <div class="opt">
       <button [routerLink]="[ '/dashboard' ]">马上体验</button>
+      &nbsp;
+      <button (click)="isVisible_login=true;">独立账户</button>
     </div>
   </div>
-</section>  
+</section>
+
+
+<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_login" nzTitle="登录" (nzOnOk)="login()"
+  (nzOnCancel)="isVisible_login=false;">
+  <nz-form-item>
+    <nz-form-label [nzSm]="4" [nzXs]="24">邮箱</nz-form-label>
+    <nz-form-control [nzSm]="18" [nzXs]="24">
+      <input nz-input [(ngModel)]="model.email" name="email">
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="4" [nzXs]="24">密码</nz-form-label>
+    <nz-form-control [nzSm]="18" [nzXs]="24">
+      <input nz-input [(ngModel)]="model.password" name="password">
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item style="margin-bottom:0;">
+    <nz-form-control [nzSm]="24" [nzXs]="24" style="text-align: right;width:90%;">
+        <span>没有账户?</span><span (click)="isVisible_login=false;isVisible_register=true;" style="margin-left: 24px;text-decoration: underline;cursor: pointer;">马上注册</span>
+    </nz-form-control>
+  </nz-form-item>
+</nz-modal>
+
+<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_register" nzTitle="注册" (nzOnOk)="register()"
+  (nzOnCancel)="isVisible_register=false;">
+  <nz-form-item>
+    <nz-form-label [nzSm]="4" [nzXs]="24">邮箱</nz-form-label>
+    <nz-form-control [nzSm]="18" [nzXs]="24">
+      <input nz-input [(ngModel)]="model2.email" name="email">
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="4" [nzXs]="24">密码</nz-form-label>
+    <nz-form-control [nzSm]="18" [nzXs]="24">
+      <input nz-input [(ngModel)]="model2.password" name="password">
+    </nz-form-control>
+  </nz-form-item>
+</nz-modal>
