--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,18 +1,38 @@
 <nz-layout class="layout">
-  <nz-header style="position: fixed;left: 0;right: 0;z-index: 100;">
-    <!-- <div class="logo"></div> -->
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 50px;">
-      <li style="font-size:16px;" [routerLink]="['/home']">
-        <i class="anticon anticon-line-chart" style="margin-left: 24px;color: #eee;"></i> <span style="cursor:pointer;color: #fff;margin-left: 4px;">业务站点实时监控平台</span>
-        <span *ngIf="userName" style="position: absolute;right: 100px;">{{userName}}<span (click)="logout()" style="text-decoration: underline;font-size: 12px;margin-left: 8px;cursor: pointer;">注销</span>
-        </span>
-        <a title="github" target="_blank" href="https://github.com/kisslove/web-monitoring" style="cursor: pointer;position: absolute;right: 30px;">
-          <img style="width: 24px;" src="../assets/images/github.png" alt="github"></a>
-      </li>
-    </ul>
+    <nz-header style="position: fixed;left: 0;right: 0;z-index: 100;">
+        <!-- <div class="logo"></div> -->
+        <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 50px;">
+            <li style="font-size:16px;" [routerLink]="['/home']">
+                <i class="anticon anticon-line-chart" style="margin-left: 24px;color: #eee;"></i> <span style="cursor:pointer;color: #fff;margin-left: 4px;">业务站点实时监控平台</span>
+                <span *ngIf="userName" style="position: absolute;right: 100px;">{{userName}}<span (click)="logout()" style="text-decoration: underline;font-size: 12px;margin-left: 8px;cursor: pointer;">注销</span>
+                </span>
+                <a title="github" target="_blank" href="https://github.com/kisslove/web-monitoring" style="cursor: pointer;position: absolute;right: 30px;">
+                    <img style="width: 24px;" src="../assets/images/github.png" alt="github"></a>
+            </li>
+        </ul>
 
-  </nz-header>
+    </nz-header>
 </nz-layout>
+<div class="thanks-for-users" *ngIf="showTips">
+    <p>谢谢您们的支持！<span nz-popover [nzContent]="contentTemplate" nzPlacement="rightTop" title="支持一下" style="color: green;font-weight: bolder;cursor: pointer;">打赏</span> </p><span class="close-tips" title="关闭" (click)="showTips=false;">X</span>
+    <nz-carousel [nzEffect]="'fade'" nzAutoPlay>
+        <div nz-carousel-content *ngFor="let item of thanksList">
+            <h3>感谢用户：{{item.name}}</h3>
+            <p>备注：{{item.notes}}</p>
+            <br>
+        </div>
+    </nz-carousel>
+</div>
+<ng-template #contentTemplate>
+    <span>微信：</span>
+    <div>
+        <img style="height:100px;width:auto;" src="../assets/images/weixin.png" alt="微信">
+    </div>
+    <span>支付宝：</span>
+    <div>
+        <img style="height:100px;width:auto;" src="../assets/images/zhifubao.png" alt="支付宝">
+    </div>
+</ng-template>
 <div class="layout">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
