增加公众号

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -35,7 +35,7 @@
 </ng-template>
 <ng-template #contentTemplate2>
     <div>
-        <img style="height:100px;width:auto;" src="../assets/images/weixin.png" alt="微信">
+        <img style="height:100px;width:auto;" src="../assets/images/weixin-gongzhonghao.jpg" alt="微信">
     </div>
 </ng-template>
 <div class="layout">
