--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -12,7 +12,7 @@
         </ul>
     </nz-header>
 </nz-layout>
-<div class="thanks-for-users" *ngIf="showTips">
+<!-- <div class="thanks-for-users" *ngIf="showTips">
     <p style="margin-bottom:4px;">喜欢的可以右上角Star一下，谢谢您们的支持！<span nz-popover [nzContent]="contentTemplate" nzPlacement="rightTop" title="支持一下" style="color: green;font-weight: bolder;cursor: pointer;">打赏</span> &nbsp;&nbsp;<span nz-popover [nzContent]="contentTemplate2" nzPlacement="rightTop"
             title="关注公众号" style="color: green;font-weight: bolder;cursor: pointer;">公众号</span></p><span class="close-tips" title="关闭" (click)="showTips=false;">X</span>
     <nz-carousel [nzEffect]="'fade'">
@@ -35,7 +35,7 @@
     <div>
         <img style="height:100px;width:auto;" src="../assets/images/weixin-gongzhonghao.jpg" alt="微信">
     </div>
-</ng-template>
+</ng-template> -->
 <div class="layout">
     <router-outlet></router-outlet>
 </div>
