--- a/web/src/app/web/web-sys/web-sys.component.html
+++ b/web/src/app/web/web-sys/web-sys.component.html
@@ -22,6 +22,7 @@
     </div>
 </nz-layout>
 <ng-template #contentTemplate>
+ <div style="width: 260px;">
     <h4 style="color:#03A9F4 !important;">一分也是爱，期望您的支持！</h4>
     <div style="width: 100px;display:inline-block;margin:4px;">
         <span>微信：</span>
@@ -37,6 +38,7 @@
     <div style="width: 200px;text-align: center;margin:4px;">
         <img style="height:150px;width:auto;" title="微信公众号" src="../assets/images/weixin-gongzhonghao.jpg" alt="微信">
     </div>
+ </div>
   </ng-template>
 <div #leftNav class="left-nav-container" style="z-index: 100;">
     <nz-layout>
