--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nz-layout class="layout">
-    <nz-header style="position: fixed;left: 0;right: 0;z-index: 100;">
+    <nz-header style="position: fixed;left: 0;right: 0;top:0;z-index: 100;">
         <!-- <div class="logo"></div> -->
         <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 50px;">
             <li style="font-size:16px;">
